# silver-funicular

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  app.py  application_flow_diagram.md  demo_vehicle_graph.py  docker-compose.yml  main.py  pyproject.toml  query_neo4j.py
.claude/: settings.local.json
docs/: NEO4J_5_MIGRATION.md
